controllers are there so different ui can happen for the same things

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </style>
 
     <div class="row fullPage">
-        <div class="col">
+        <div class="col floating">
             <div class="instanceInfo contentPadding" id="instanceInfoPanel">
 
                 <h2>Instance Info</h2>
@@ -134,9 +134,9 @@
         <div>
             <button type="button" id="close" aria-label="close" class="closeButton">X</button>
             <h2>Choose Module</h2>
-            <div id="moduleOptionContainer">
+            <div class="moduleOptionContainer">
             </div>
-            <button type="button" id="close" class="createButton">Choose</button>
+            <button type="button" id="close" class="chooseButton">Choose</button>
         </div>
     </dialog>
     <div id="templates" style="display:none;">
