--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>Module</p>
                     <div class="moduleNameDisplay"></div>
                     <div class="interfaceNameDisplay"></div>
-                    <button class="changeModuleButton">Change Module</button>
+                    <!-- <button class="changeModuleButton">Change Module</button> -->
                 </div>
                 <div>
                     <p>Dependencies</p>
