--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         .py-0 {
             padding-block: 0;
         }
+
+        .error{
+            color:red;
+        }
     </style>
     <button id="debugBreak">debug</button>
     <div class="row fullPage">
@@ -112,6 +116,7 @@
                 <p>
                     <button type="button" class="saveButton">Save</button>
                     <button type="button" class="cancelButton">Cancel</button>
+                    <button type="button" class="deleteButton">Delete Instance</button>
                 </p>
             </div>
             <div class="appInfo contentPadding" id="appInfoPanel">
@@ -183,6 +188,7 @@
             <div class="instanceName"></div>
             <div class="instanceModule"></div>
             <div class="instanceInterface"></div>
+            <div class="instanceError error"></div>
         </div>
 
     </div>
