--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </p>
                 <p>
                     <button id="export">Export</button>
-                    <input type="file" id="import" name="filename">Import</input>
                 </p>
+                <input type="file" id="import" name="filename"></input>
             </div>
             <div class="instanceInfo contentPadding" id="instanceInfoPanel">
                 <h2>Instance Info</h2>
@@ -128,7 +128,6 @@
                     <p>Module</p>
                     <div class="moduleNameDisplay"></div>
                     <div class="interfaceNameDisplay"></div>
-                    <!-- <button class="changeModuleButton">Change Module</button> -->
                 </div>
                 <div>
                     <p>Dependencies</p>
