--- a/AppRunner/shell.html
+++ b/AppRunner/shell.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="favicon.svg">
+    <link rel="icon">
 </head>
 <body style=margin:0;>
-    <div style="height:25px; background-color:#000;"></div>
+    <div style="height:25px; background-color:#000;"><!--Top bar of phone--></div>
     <div style="margin:5px;">
         <div id="availableModules"></div>
         <div id="graphContainer"></div>
