Server Save and run button And better crudui module that uses ui factory

--- a/AppEditor/index.html
+++ b/AppEditor/index.html
@@ -110,8 +110,10 @@
                 <p>
                     <button id="export">Export</button>
                 </p>
-                <input type="file" id="import" name="filename"></input>
-                <button id="saveToServer">Save to server</button>
+            
+                <div><input type="file" id="import" name="filename"></input></div>
+                <div><button id="saveToServer">Save to server</button></div>
+                <div><button id="saveToServerAndRun">Save to server and run</button></div>
             </div>
             <div class="instanceInfo contentPadding" id="instanceInfoPanel">
                 <h2>Instance Info</h2>
